--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "babel-watch server.js"
+    "dev": "babel-watch server/server.js"
   },
   "author": "carine",
   "license": "ISC",
@@ -17,6 +17,7 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/register": "^7.5.5",
     "@babel/runtime": "^7.5.5",
+    "@hapi/joi": "^15.1.0",
     "babel": "^6.23.0",
     "eslint": "^6.1.0",
     "express": "^4.17.1",
@@ -26,6 +27,7 @@
     "babel-watch": "^7.0.0",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
+    "eslint-config-airbnb": "^17.1.1",
     "mocha": "^6.2.0"
   }
 }
