--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "babel": "^6.23.0",
     "eslint": "^6.1.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
